- Added image in Fruit Model.

--- a/game.html
+++ b/game.html
@@ -66,7 +66,7 @@
     <!-- ASIDE -->
     <aside class="aside">
         <div class="aside__item aside__item--level">Level <level>1</level></div>
-        <div class="aside__item aside__item--icon"><fruit>🍓</fruit></div>
+        <div class="aside__item aside__item--icon"><fruit></fruit></div>
         <div class="aside__item aside__item--time">10</div>
     </aside>
 
